[package]
name = "GameMaster"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }